@@ -21,7 +21,10 @@ import java.util.ListIterator;
 import java.util.Map;
 import java.util.PriorityQueue;
 import java.util.Queue;
+import java.util.Set;
 
+import net.sourceforge.waters.analysis.compositional.SelectionHeuristic;
+import net.sourceforge.waters.analysis.compositional.ChainSelectionHeuristic;
 import net.sourceforge.waters.analysis.efa.base.EFANonblockingChecker;
 import net.sourceforge.waters.analysis.tr.BFSSearchSpace;
 import net.sourceforge.waters.analysis.tr.EventEncoding;
@@ -98,22 +101,24 @@ public class EFSMConflictChecker extends AbstractModuleConflictChecker
     mEFSMTRSimplifierFactory = factory;
   }
 
-  public ChainVariableSelectionHeuristic getChainVariableSelectionHeuristic()
+  public SelectionHeuristic<EFSMVariable> getVariableSelectionHeuristic()
   {
-    return mChainVariableSelectionHeuristic;
+    return mVariableSelectionHeuristic;
   }
 
-  public void setChainVariableSelectionHeuristic(final ChainVariableSelectionHeuristic chain)
+  public void setVariableSelectionHeuristic
+    (final SelectionHeuristic<EFSMVariable> chain)
   {
-    mChainVariableSelectionHeuristic = chain;
+    mVariableSelectionHeuristic = chain;
   }
 
-  public CompositionSelectionHeuristic getCompositionSelectionHeuristic()
+  public SelectionHeuristic<EFSMPair> getCompositionSelectionHeuristic()
   {
     return mCompositionSelectionHeuristic;
   }
 
-  public void setCompositionSelectionHeuristic(final CompositionSelectionHeuristic heuristic)
+  public void setCompositionSelectionHeuristic
+    (final SelectionHeuristic<EFSMPair> heuristic)
   {
     mCompositionSelectionHeuristic = heuristic;
   }
@@ -138,6 +143,12 @@ public class EFSMConflictChecker extends AbstractModuleConflictChecker
   public CompilerOperatorTable getOperatorTable()
   {
     return mCompilerOperatorTable;
+  }
+
+
+  EFSMSystem getCurrentEFSMSystem()
+  {
+    return mCurrentEFSMSystem;
   }
 
 
@@ -200,32 +211,27 @@ public class EFSMConflictChecker extends AbstractModuleConflictChecker
     if (mDocumentManager == null) {
       mDocumentManager = new DocumentManager();
     }
-    if (mChainVariableSelectionHeuristic == null) {
-      final List <VariableSelectionHeuristic> defaultVariableSelectionHeuristicList =
-        new ArrayList<VariableSelectionHeuristic>();
-//      final VariableSelectionHeuristic maxT =
-//        new MaxTrueVariableSelectionHeuristic(factory, mCompilerOperatorTable);
-//      defaultVariableSelectionHeuristicList.add(maxT);
-//      final VariableSelectionHeuristic minS =
-//        new MinStatesVariableSelectionHeuristic(factory, mCompilerOperatorTable);
-//      defaultVariableSelectionHeuristicList.add(minS);
-      final VariableSelectionHeuristic maxOc =
-        new MaxOccurrenceVariableSelectionHeuristic(factory, mCompilerOperatorTable);
-      defaultVariableSelectionHeuristicList.add(maxOc);
-      final VariableSelectionHeuristic maxSelfloop =
-        new MaxSelfloopVariableSelectionHeuristic(factory, mCompilerOperatorTable);
-      defaultVariableSelectionHeuristicList.add(maxSelfloop);
-      final VariableSelectionHeuristic minES =
-        new EstimatedMinStatesVariableSelectionHeuristic(factory, mCompilerOperatorTable);
-      defaultVariableSelectionHeuristicList.add(minES);
-      mChainVariableSelectionHeuristic=
-        new ChainVariableSelectionHeuristic
-        (factory, mCompilerOperatorTable, defaultVariableSelectionHeuristicList);
+    if (mVariableSelectionHeuristic == null) {
+//      final AbstractSelectionHeuristic<EFSMVariable> maxT =
+//        new MaxTrueVariableSelectionHeuristic();
+//      final AbstractSelectionHeuristic<EFSMVariable> minS =
+//        new MinStatesVariableSelectionHeuristic();
+      final SelectionHeuristic<EFSMVariable> maxOc =
+        new MaxOccurrenceVariableSelectionHeuristic();
+      final SelectionHeuristic<EFSMVariable> maxSelfloop =
+        new MaxSelfloopVariableSelectionHeuristic();
+      final SelectionHeuristic<EFSMVariable> minES =
+        new EstimatedMinStatesVariableSelectionHeuristic();
+      mVariableSelectionHeuristic =
+        new ChainSelectionHeuristic<EFSMVariable>(maxOc, maxSelfloop, minES);
     }
-
+    mUnfoldingCache = new EFSMUnfoldingCache(this);
+    mVariableSelectionHeuristic.setContext(mUnfoldingCache);
     if (mCompositionSelectionHeuristic == null) {
+      final SelectionHeuristic<EFSMPair> minSynch =
+        new MinSynchCompositionSelectionHeuristic();
       mCompositionSelectionHeuristic =
-        new MinSynchCompositionSelectionHeuristic(factory, mCompilerOperatorTable);
+        new ChainSelectionHeuristic<EFSMPair>(minSynch);
     }
 
     if (mEFSMTRSimplifierFactory == null) {
@@ -251,12 +257,11 @@ public class EFSMConflictChecker extends AbstractModuleConflictChecker
   {
     mCompilerOperatorTable = null;
     mDocumentManager = null;
-    mChainVariableSelectionHeuristic = null;
-    mCompositionSelectionHeuristic = null;
     mEFSMTRSimplifierFactory = null;
     mSimplifier = null;
     mVariablePartitionComputer = null;
     mPartialUnfolder = null;
+    mUnfoldingCache = null;
     mEFSMSynchronizer = null;
     mNonblockingChecker = null;
     mEFSMVariableCollector = null;
@@ -352,12 +357,16 @@ public class EFSMConflictChecker extends AbstractModuleConflictChecker
       }
       final List<EFSMTransitionRelation> efsmTransitionRelationList =
         mCurrentEFSMSystem.getTransitionRelations();
+      final List<EFSMVariable> localVars =
+        mCurrentEFSMSystem.getLocalVariables();
       final EFSMVariable varSelected =
-        mChainVariableSelectionHeuristic.selectVariable(mCurrentEFSMSystem);
+        mVariableSelectionHeuristic.select(localVars);
       if (varSelected != null) {
         result.addCompositionAttempt();
         final EFSMTransitionRelation varEFSMTransitionRelation =
           varSelected.getTransitionRelation();
+        final int expectedNumVars =
+          varEFSMTransitionRelation.getVariables().size() - 1;
         final TRPartition partition =
           mVariablePartitionComputer.computePartition(varSelected,
                                                       mCurrentEFSMSystem);
@@ -386,27 +395,27 @@ public class EFSMConflictChecker extends AbstractModuleConflictChecker
             break;
           }
         }
-        if (unfoldSimplified.getVariables().size() + 1 <
-            varEFSMTransitionRelation.getVariables().size()) {
+        if (unfoldSimplified.getVariables().size() < expectedNumVars) {
           splitCurrentSubsystem();
         }
       } else if (efsmTransitionRelationList.size() > 1) {
         result.addCompositionAttempt();
-        final List<EFSMTransitionRelation> selectedTR =
-          mCompositionSelectionHeuristic.selectComposition(mCurrentEFSMSystem);
-        final EFSMTransitionRelation TR1 = selectedTR.get(0);
-        final EFSMTransitionRelation TR2 = selectedTR.get(1);
+        final Set<EFSMPair> pairs = mCurrentEFSMSystem.getPairs();
+        final EFSMPair selectedPair =
+          mCompositionSelectionHeuristic.select(pairs);
+        final EFSMTransitionRelation TR1 = selectedPair.getFirst();
+        final EFSMTransitionRelation TR2 = selectedPair.getSecond();
         final EFSMTransitionRelation synchTR =
           mEFSMSynchronizer.synchronize(TR1, TR2);
         result.addEFSMTransitionRelation(synchTR);
+        final int expectedNumVars = synchTR.getVariables().size();
         EFSMTransitionRelation synchSimplified = simplify(synchTR);
         final boolean splitting;
         if (synchSimplified == null) {
           synchSimplified = synchTR;
           splitting = false;
         } else {
-          splitting =
-            synchTR.getVariables().size() < synchSimplified.getVariables().size();
+          splitting = synchSimplified.getVariables().size() < expectedNumVars;
         }
         efsmTransitionRelationList.remove(TR1);
         efsmTransitionRelationList.remove(TR2);
@@ -633,14 +642,15 @@ public class EFSMConflictChecker extends AbstractModuleConflictChecker
   //# Data Members
   private CompilerOperatorTable mCompilerOperatorTable;
   private EFSMTRSimplifierFactory mEFSMTRSimplifierFactory;
-  private ChainVariableSelectionHeuristic mChainVariableSelectionHeuristic;
+  private SelectionHeuristic<EFSMVariable> mVariableSelectionHeuristic;
+  private SelectionHeuristic<EFSMPair> mCompositionSelectionHeuristic;
   private int mInternalTransitionLimit = Integer.MAX_VALUE;
 
   private DocumentManager mDocumentManager;
   private EFSMTRSimplifier mSimplifier;
   private EFSMVariablePartitionComputer mVariablePartitionComputer;
   private EFSMPartialUnfolder mPartialUnfolder;
-  private CompositionSelectionHeuristic mCompositionSelectionHeuristic;
+  private EFSMUnfoldingCache mUnfoldingCache;
   private EFSMSynchronizer mEFSMSynchronizer;
   private EFANonblockingChecker mNonblockingChecker;
   private EFSMVariableCollector mEFSMVariableCollector;
